Added more on the bleichenbacher attack

--- a/cryptopals_set6.ipynb
+++ b/cryptopals_set6.ipynb
@@ -925,17 +925,10 @@
    "source": [
     "### Exercice 47\n",
     "\n",
-    "Bleichenbacher's PKCS 1.5 padding Oracle (Simple Case)"
+    "Bleichenbacher's PKCS 1.5 padding Oracle (Simple Case)\n",
+    "\n",
+    "(moving directly to complete case)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -943,7 +936,9 @@
    "source": [
     "### Exercice 48\n",
     "\n",
-    "Bleichenbacher's PKCS 1.5 padding Oracle (Complete Case)"
+    "Bleichenbacher's PKCS 1.5 padding Oracle (Complete Case)\n",
+    "\n",
+    "(see PDF for explanation)"
    ]
   },
   {
