--- a/cryptopals_sync.ipynb
+++ b/cryptopals_sync.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -102,20 +102,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0002e8de9447414414b52b515345afb60a40cb44004b69636b2069742c204343\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import base64\n",
-    "def oracle(encrypter, cypher):\n",
-    "    \"\"\"Returns True if the plaintext is odd and False if it is even\"\"\"\n",
-    "    return bool(encrypter.decrypt(cypher, i2s=False) % 2)\n",
+    "import random\n",
     "\n",
-    "message = \"VGhhdCdzIHdoeSBJIGZvdW5kIHlvdSBkb24ndCBwbGF5IGFyb3VuZCB3aXRoIHRoZSBGdW5reSBDb2xkIE1lZGluYQ==\"\n",
-    "message = base64.b64decode(message)\n",
-    "cypher = r.encrypt(message, i2s=False)"
+    "B = 2**240\n",
+    "def oracle(encrypter, cypher):\n",
+    "    return 2*B <= encrypter.decrypt(cypher, i2s=False) < 3*B - 1\n",
+    "\n",
+    "def non_null_random_byte():\n",
+    "    b = os.urandom(1)[0]\n",
+    "    if b != 0:\n",
+    "        return hex(b)[2:].zfill(2)\n",
+    "    else:\n",
+    "        return non_null_random_byte()\n",
+    "\n",
+    "def pkcs_pad(message):\n",
+    "    \"\"\"Pad a message in PKCS#1.5 fashion\"\"\"\n",
+    "    padded_message = \"00\" + hex(str_to_int(message))[2:]\n",
+    "    if len(padded_message) % 2 == 1:\n",
+    "        padded_message = \"0\" + padded_message # Ensure byte alignement\n",
+    "    while len(padded_message) + len(\"0002\") < 64: # we use 256 bit messages\n",
+    "        padded_message = non_null_random_byte() + padded_message\n",
+    "    padded_message = \"0002\" + padded_message\n",
+    "    return int(padded_message, base=16)\n",
+    "\n",
+    "def pkcs_unpad(message):\n",
+    "    pass\n",
+    "\n",
+    "message = b\"Kick it, CC\"\n",
+    "pkcs_message = pkcs(message)\n",
+    "cypher = r.encrypt(pkcs_message, i2s=False)\n",
+    "assert oracle(r, cypher)"
    ]
   },
   {
@@ -192,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -200,16 +232,16 @@
     {
      "data": {
       "text/plain": [
-       "11010048"
+       "256"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "42*2**18"
+    "len(hex(p*q))-2"
    ]
   },
   {
