--- a/cryptopals_set7.ipynb
+++ b/cryptopals_set7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,18 +167,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup : a client and a server share a key K.\n",
     "# The server has methods to validate an incoming message from the client\n",
     "\n",
+    "\n",
     "import os, random\n",
     "\n",
-    "class Server:\n",
-    "    def __init__(self, key):\n",
+    "class Client:\n",
+    "    def __init__(self, key, account):\n",
+    "        \"\"\"Session for a given account holder.\n",
+    "        Allows the holder to generate messages from transactions where he is the origin.\n",
+    "        \"\"\"\n",
     "        self._key = key\n",
+    "        self._account = account\n",
+    "        \n",
+    "    def emit_simple(self, target, amount, iv):\n",
+    "        \"\"\"Emit a transaction from this client to any given target.\"\"\"\n",
+    "        msg = \"from={}&to={}&amount={}\".format(self._account, target, amount).encode()\n",
+    "        return msg, iv, MAC(msg, self._key, iv)\n",
+    "        \n",
+    "    def emit(self, targets, amounts):\n",
+    "        \"\"\"Emit a transaction from this client to any given target.\"\"\"\n",
+    "        tx_list = ';'.join('{}:{}'.format(t, a) for t,a in zip(targets, amounts))\n",
+    "        msg = \"from={}&tx_list={}\".format(self._account, tx_list).encode()\n",
+    "        return msg, MAC(msg, self._key, b'\\x00'*16)\n",
+    "\n",
+    "class Server:\n",
+    "    def __init__(self):\n",
+    "        self._key = os.urandom(16)\n",
     "        \n",
     "    def validate_simple(self, message, iv, mac):\n",
     "        \"\"\"For the simple çase with a user-provided IV\"\"\"\n",
@@ -188,23 +208,9 @@
     "        \"\"\"Using a fixed IV\"\"\"\n",
     "        return MAC(message, self._key, b'\\x00'*16) == mac\n",
     "    \n",
-    "class Client:\n",
-    "    def __init__(self, key):\n",
-    "        self._key = key\n",
-    "    \n",
-    "    def emit_simple(self, amount):\n",
-    "        \"\"\"Emit a message without fixed IV, that will be intercepted by the attacker\"\"\"\n",
-    "        message = 'from=bob&to=alice&amount={}'.format(amount).encode()\n",
-    "        iv = os.urandom(16)\n",
-    "        return message, iv, MAC(message, self._key, iv)\n",
-    "    \n",
-    "    def emit(self):\n",
-    "        \"\"\"Emit a message using a fixed IV, with a list of transactions.\"\"\"\n",
-    "        message = b'from=client&tx_list=customer0:17'\n",
-    "        for i in range(9):\n",
-    "            message += (';customer' + str(i+1) + ':' + str(random.randint(1, 20))).encode()\n",
-    "        iv = b'\\x00'*16\n",
-    "        return message, MAC(message, self._key, iv)\n",
+    "    def open_session(self, account):\n",
+    "        return Client(self._key, account)\n",
+    "\n",
     "    \n",
     "def init():\n",
     "    key = os.urandom(16)\n",
@@ -213,66 +219,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alice, bob = init()\n",
-    "assert alice.validate_simple(*bob.emit_simple(10))\n",
-    "assert alice.validate(*bob.emit())"
+    "alice = Server()\n",
+    "bob = alice.open_session('bob')\n",
+    "assert alice.validate_simple(*bob.emit_simple('legit', 10, os.urandom(16)))\n",
+    "assert alice.validate(*bob.emit(['legit1', 'legit2'], [10, 20]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we control the IV it is easy, at you just have to set the new IV to :\n",
+    "$$\\begin{align*}\n",
+    "IV_{new}\n",
+    "&= IV_{old} \\bigoplus message_{block1} \\bigoplus new\\_message_{block1} \n",
+    "\\end{align*}$$\n",
+    "When checking the MAC, the first block will be :\n",
+    "$$\\begin{align*}\n",
+    "IV_{new} \\bigoplus new\\_message_{block1}\n",
+    "&= IV_{old} \\bigoplus message_{block1} \\bigoplus new\\_message_{block1} \\bigoplus new\\_message_{block1} \\\\\n",
+    "&= IV_{old} \\bigoplus message_{block1}\n",
+    "\\end{align*}$$\n",
+    "which is exactly the same first block as with our original message (from eve to eve). We can then just reuse the MAC as the rest of the message is the same."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First : the simple case, with a controlled IV\n",
-    "message, iv, mac = bob.emit_simple(1000000)\n",
+    "eve = alice.open_session('eve')\n",
+    "amount = 10000\n",
+    "iv = os.urandom(16)\n",
+    "message, iv, mac = eve.emit_simple('eve', amount, iv)# Generate a message from eve to eve for a large amount\n",
     "\n",
-    "# Change message :\n",
-    "new_message = b'  from=bob&to=eve&amount=1000000'\n",
-    "iv = xor(xor(new_message[:16], iv, 'bytes'), message[:16], 'bytes')\n",
-    "assert alice.validate_simple(new_message, iv, mac)"
+    "# Forge new message and associated IV\n",
+    "new_message = b'from=bob&to=eve&amount=' + str(amount).encode()\n",
+    "new_iv = xor(iv, xor(message[:16], new_message[:16], 'bytes'), 'bytes')\n",
+    "assert alice.validate_simple(new_message, new_iv, mac)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will choose as an IV the following value :\n",
+    "Without controlling the IV, I will add a single hypothesis to our attacker, which should not be too far fetched : the IV is known to the attacker. It is fixed, but known. Another constraint we have to add, is that the server does not validate messages too closely (meaning that we can insert bad transactions in the middle of good transactions and get away with still executing the good ones).\n",
+    "\n",
+    "Our intercepted message is 3 blocks long (B1, B2 and B3 - which may be padded), while our length extension is only one block or shorter. Eve will try to get the MAC for the following message : \n",
+    "```\n",
+    "eve_message = from=eve&tx_list=eve:100;eve:100;eve:1000000\n",
+    "eve_mac = MAC(evil_message)\n",
+    "```\n",
+    "Let's set a few variables :\n",
     "$$\\begin{align*}\n",
-    "IV\n",
-    "&= message_{block1} \\bigoplus IV_{old} \\bigoplus new\\_message_{block1} \n",
+    "MAC_{bob} = MAC(message_{bob}) = MAC(B1\\ ||\\ B2\\ ||\\ B3)\\\\\n",
+    "MAC_{eve} = MAC(message_{eve}) = MAC(B'1\\ ||\\ B'2)\n",
     "\\end{align*}$$\n",
     "\n",
-    "Now to the trickier part. The idea is to realise that the MAC is actually just the last block of the CBC cipher. This means that if we expand the message by adding to the end of it, the MAC will appear somewhere in the middle."
+    "Now, we craft the following message :\n",
+    "$$\\begin{align*}\n",
+    "message = B1\\ ||\\ B2\\ ||\\ B3\\ ||\\ (MAC_{bob} \\bigoplus IV \\bigoplus B'1)\\ ||\\ B'2\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "When evaluating the MAC, the CBC encryption will arrive at the encryption of B3 and generate following the blocks :\n",
+    "$$\\begin{align*}\n",
+    "AES(B3 \\bigoplus\\ ...) &\\rightarrow\\ MAC_{bob}\\\\\n",
+    "&\\rightarrow MAC_{bob}\\ \\bigoplus\\ (MAC_{bob} \\bigoplus IV \\bigoplus B'1)=IV \\bigoplus B'1\\\\\n",
+    "&\\rightarrow AES(IV \\bigoplus B'1) \\bigoplus B'2\\\\\n",
+    "&\\rightarrow AES(AES(IV \\bigoplus B'1) \\bigoplus B'2)\n",
+    "&&= MAC_{eve}\n",
+    "\\end{align*}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second : the hard case, without controlled iv\n",
+    "message_bob, mac_bob = bob.emit(['legit1', 'legit2', 'legit3'], [10, 11, 12])\n",
+    "iv = b'\\x00' * 16\n",
+    "\n",
+    "# Eve will emit a message to herself\n",
+    "message_eve, mac_eve = eve.emit(['eve', 'eve', 'eve'], [100, 100, 1000000])\n",
+    "evil_message = pad(message_bob, blocksize=16) + xor(xor(mac_bob, iv, 'bytes'), message_eve[:16], 'bytes') + message_eve[16:]\n",
+    "assert alice.validate(evil_message, mac_eve)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In order to protect against this, in theory we only have to have a secret IV. But this means the IV should be as secret as the key, which partially goes against the very idea of an IV. Also stricter validation should be used in order to detect and reject messages where garbage has been injected in the middle."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'\\rS\\xc1\\x99\\xa4\\xf9\\xd5\\xb6\\x03\\xd2\\xf1\\xbe~\\x7f\\x9e\\x05'"
+       "32"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iv"
+    "len(\"from=eve&tx_list=eve:100;eve:100\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\xb7aJ\\x8b\\xa5o-\\x0c\\xfdq\\xe87\\xeb\\xc8}\\xac'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.urandom(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len( b'amount=10&to=eve')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(new_iv)"
    ]
   },
   {
@@ -299,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
